--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
+.parallax-bg {
+    perspective: 1000px;
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
+  
+  .parallax-bg .absolute {
+    transform: translateZ(-1px) scale(1.5);
+  }
+
+  /* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ff6600;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #ff6600;
+}
